--- a/templates/product/display_product.html.twig
+++ b/templates/product/display_product.html.twig
@@ -5,7 +5,7 @@
 			<div class="product_action_box">
 				<ul class="list_none pr_action_btn">
 					<li class="add-to-cart">
-						<a href="#">
+						<a href="/cart/add/{{product.id}}/1">
 							<i class="icon-basket-loaded"></i>
 							Add To Cart
 						</a>
@@ -35,8 +35,8 @@
 				</a>
 			</h6>
 			<div class="product_price">
-				<span class="price">{{ product.soldePrice/100 }}</span>
-				<del>{{ product.regularPrice/100 }}</del>
+				<span class="price">{{ (product.soldePrice/100) | format_currency('EUR') }}</span>
+				<del>{{ (product.regularPrice/100) | format_currency('EUR') }}</del>
 				<div class="on_sale">
 					<span>{{ ((product.regularPrice - product.soldePrice) * 100 / product.regularPrice)|number_format(2, '.', ' ') }}% Off</span>
 				</div>
@@ -49,8 +49,8 @@
 			</div>
 			<div class="pr_desc">
 				<p>Lorem ipsum dolor sit amet,
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																							                                                        consectetur adipiscing elit. Phasellus blandit massa enim.
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																							                                                        Nullam id varius nunc id varius nunc.</p>
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																												                                                        consectetur adipiscing elit. Phasellus blandit massa enim.
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																												                                                        Nullam id varius nunc id varius nunc.</p>
 			</div>
 			<div class="pr_switch_wrap">
 				<div class="product_color_switch">
